--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.17.0",
+    "@types/node": "^12.6.8",
     "cheerio": "^1.0.0-rc.3",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "ts-node-dev": "^1.0.0-pre.40",
+    "tslint": "^5.18.0"
   }
 }
-
-
