--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/express": "^4.17.0",
-    "@types/node": "^12.6.8",
     "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "ts-node-dev": "^1.0.0-pre.40",
-    "tslint": "^5.18.0"
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.0",
+    "@types/node": "^12.6.8",
+    "ts-node-dev": "^1.0.0-pre.40"
   }
 }
